--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 branches:
   only:
-    - master
+    - travis
 language: ruby
 bundler_args: --without development
 script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
-after_success:
-  - git clone -q git://github.com/puppetlabs/ghpublisher.git .forge-release
-  - .forge-release/publish
 rvm:
   - 1.8.7
   - 1.9.3
@@ -14,6 +11,7 @@ rvm:
 env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
+    - PUPPET_GEM_VERSION="~> 3.0.0"
     - PUPPET_GEM_VERSION="~> 3.3.0"
   global:
   - PUBLISHER_LOGIN=puppetlabs
@@ -27,6 +25,8 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: 2.0.0
       env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 3.0.0"
 notifications:
   email: false
 # Temporary workaround for broken Rubygems on Travis
